--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,12 @@ soundfile>=0.10.3
 faster-whisper>=0.5.0
 ffmpeg-python>=0.2.0
 
-# TTS - CSM
+# TTS - Coqui TTS
 torch>=2.0.0
 torchaudio>=2.0.0
 transformers>=4.25.0
 accelerate>=0.20.0
+TTS>=0.17.0
 
 # LLM - Ollama
 ollama>=0.1.0
