--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,11 @@ TTS>=0.17.0
 # LLM - Ollama
 ollama>=0.1.0
 
+# Memory and embeddings
+sentence-transformers>=2.2.0
+chromadb>=0.4.0
+# sqlite3 is part of the Python standard library
+
 # Utilities
 python-dotenv>=0.19.0
 tqdm>=4.62.0
