--- a/config/config.yaml
+++ b/config/config.yaml
@@ -17,11 +17,14 @@ llm:
 
 # Text-to-Speech settings
 tts:
-  engine: "csm"  # Options: csm
+  engine: "dia"  # Options: csm, dia
   language: "EN"  # Language code for CSM-1B (EN, ES, FR, ZH, JP, KR)
   voice: "EN-Default"  # Available voices for English: EN-US, EN-BR, EN_INDIA, EN-AU, EN-Default
   speed: 1.0
   device: "cuda"  # Options: cpu, cuda - Using GPU for better performance
+
+  # Dia TTS specific settings
+  audio_prompt_path: null  # Path to audio file for voice cloning with Dia TTS
 
 # Audio settings
 audio:
