--- a/config/elevenlabs_tts_config.yaml
+++ b/config/elevenlabs_tts_config.yaml
@@ -4,8 +4,9 @@
 api_key: ""  # Your ElevenLabs API key (leave empty to use ELEVENLABS_API_KEY environment variable)
 
 # Voice settings
-voice_id: "JBFqnCBsd6RMkjVDRZzb"  # Default voice: Josh (male)
+voice_id: "3sJ9qwog9VNmFa3qD96n"  # Matilda's voice
 # Other popular voices:
+# - "JBFqnCBsd6RMkjVDRZzb" - Josh (male)
 # - "21m00Tcm4TlvDq8ikWAM" - Rachel (female)
 # - "AZnzlk1XvdvUeBnXmlld" - Domi (female)
 # - "EXAVITQu4vr4xnSDxMaL" - Bella (female)
