Update .gitignore to exclude test files and generated content
- Add data/memory directories to .gitignore
- Exclude audio output files (*.wav)
- Ignore Node.js build artifacts
- Exclude requirements_current.txt

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,9 @@ ENV/
 data/logs/
 data/audio/
 data/temp/
+data/memory/backups/
+data/memory/long_term/
+data/memory/test_results/
 
 # Model files
 *.gguf
@@ -50,3 +53,13 @@ config/prompts/*.txt
 # OS specific
 .DS_Store
 Thumbs.db
+
+# Audio output files
+*.wav
+
+# Node.js
+node_modules/
+.vite/
+
+# Requirements
+requirements_current.txt
